c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/void_compare.c
int main(void) {
  // you can't compare void expressions
  if ((void)1 < (void)2)
    return 1;
  return 0;
}